# kolornote

./: .gitignore  README.md  checklist_manager.html  manage.py  pyproject.toml  requirements.txt  script.py
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py  0002_customuser_timezone.py  0003_loginhistory.py  0004_alter_customuser_timezone.py
kolornote/: asgi.py  urls.py  wsgi.py
kolornote/settings/: base.py  dev.py  prod.py
notes/: admin.py  context_processors.py  forms.py  middleware.py  models.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_note_is_public.py
notes/templatetags/: checklist_filters.py  timezone_tags.py
static/css/: style.css
static/js/: app.js
templates/: 404.html  500.html  base.html  home.html
templates/notes/: color_update.html  colors.html  create.html  detail.html  import.html  list.html  profile.html  public_detail.html  public_list.html
templates/registration/: login.html  register.html
